remove sub-work

--- a/config.org
+++ b/config.org
@@ -6,7 +6,6 @@
 * Table of Contents :TOC:
 - [[#preamble][Preamble]]
 - [[#the-simple-stuff][The simple stuff]]
-  - [[#work-config][Work config]]
   - [[#personal-info][Personal info]]
   - [[#default-settings][Default settings]]
   -  [[#doom-config][Doom Config]]
@@ -56,31 +55,18 @@ apparently this makes things run faster (I found it [[https://nullprogram.com/bl
 #!/usr/bin/env bash
 #+end_src
 
-** Work config
-
-Sometimes I want things to be slightly different if I am at work
-#+begin_src emacs-lisp
-(defmacro da/at-work ()
-  "Return t if current user is davida, nil otherwise."
-  `(string-equal (user-login-name) "davida"))
-
-(defun da/sub-work (home work)
-  "Return HOME if the current user is not davida, WORK otherwise."
-  (if (da/at-work) work home))
-#+end_src
-
 ** Personal info
 
 From ~GPG~ to ~git~ to email clients and snippets, the following seems kinda important to have around
 #+begin_src emacs-lisp
 (setq user-full-name "David Adams"
-      user-mail-address "dbadams@iinet.net.au")
+      user-mail-address "david@dadams2.com")
 #+end_src
 
 
 *** GPG
 #+begin_src emacs-lisp
-(setq auth-sources (da/sub-work '("~/.authinfo.gpg") '("~/.authinfo"))
+(setq auth-sources '("~/.authinfo.gpg")
       auth-source-cache-expiry nil) ; default is 7200 (2h)
 #+end_src
 ** Default settings
@@ -578,7 +564,7 @@ I like the softer look of Nord and use it in a number of other places. There are
 but overall its nice.
 
 #+begin_src emacs-lisp
-(setq doom-theme (da/sub-work 'doom-nord 'doom-vibrant))
+(setq doom-theme 'doom-nord)
 #+end_src
 
 I use linux on all my systems so I don't need to be told that =LF UTF-8= is my file encoding all the time
@@ -2446,7 +2432,7 @@ The beginning of a great journey
 *** Basic configuration
 #+begin_src emacs-lisp
 (setq org-directory "~/Org/")
-(setq +org-capture-todo-file (da/sub-work "~/Org/todo.org" "~/Org/work/todo.org"))
+(setq +org-capture-todo-file "~/Org/todo.org")
 (setq org-agenda-files '("~/Org/experiments.org"
                          "~/Org/mylife.org"
                          "~/Org/birthday.org"
@@ -2467,7 +2453,7 @@ The beginning of a great journey
 (setq org-enforce-todo-dependencies t)
 (setq org-track-ordered-property-with-tag t) ;; make it more visible that things are ordered
 (setq org-refile-allow-creating-parent-nodes t)
-(setq org-archive-location (da/sub-work "~/Org/Archive.org::datetree/* Finished Tasks " "~/Org/work/work_archive.org::datetree/ "))
+(setq org-archive-location "~/Org/Archive.org::datetree/* Finished Tasks ")
 (setq org-clock-into-drawer "CLOCKING")
 (setq org-refile-targets
       '(("Archive.org" :maxlevel . 1)
