removing some old things we don't need anymore

--- a/config.org
+++ b/config.org
@@ -413,7 +413,7 @@ emacs-lisp          ; drown in parentheses
  ;; +lsp
  +tree-sitter)      ; the poster child for carpal tunnel syndrome
 (javascript +lsp)   ; all(hope(abandon(ye(who(enter(here))))))
-(julia +lsp)        ; a better, faster MATLAB
+;; (julia +lsp)        ; a better, faster MATLAB
 ;;kotlin            ; a better, slicker Java(Script)
 latex               ; writing papers in Emacs has never been so fun
 ;;lean              ; for folks with too much to prove
@@ -2379,24 +2379,24 @@ We can also use this a signature,
 
 just makes the icons slightly better for unicode fonts
 #+begin_src emacs-lisp
-(cl-flet* ((make-help-button (text help-echo)
-             (with-temp-buffer
-               (insert-text-button text
-                                   'help-echo help-echo
-                                   'mouse-face nil)
-               (buffer-string)))
-           (make-help-button-cons (text1 text2 help-echo)
-             (cons (make-help-button text1 help-echo)
-                   (make-help-button text2 help-echo))))
-  (setq mu4e-headers-threaded-label
-        (make-help-button-cons "T" (concat " " (all-the-icons-octicon "git-branch" :v-adjust 0.05))
-                               "Thread view")
-        mu4e-headers-related-label
-        (make-help-button-cons "R" (concat " " (all-the-icons-material "link" :v-adjust -0.1))
-                               "Showing related emails")
-        mu4e-headers-full-label
-        (make-help-button-cons "F" (concat " " (all-the-icons-material "disc_full"))
-                               "Search is full!")))
+;; (cl-flet* ((make-help-button (text help-echo)
+;;              (with-temp-buffer
+;;                (insert-text-button text
+;;                                    'help-echo help-echo
+;;                                    'mouse-face nil)
+;;                (buffer-string)))
+;;            (make-help-button-cons (text1 text2 help-echo)
+;;              (cons (make-help-button text1 help-echo)
+;;                    (make-help-button text2 help-echo))))
+;;   (setq mu4e-headers-threaded-label
+;;         (make-help-button-cons "T" (concat " " (all-the-icons-octicon "git-branch" :v-adjust 0.05))
+;;                                "Thread view")
+;;         mu4e-headers-related-label
+;;         (make-help-button-cons "R" (concat " " (all-the-icons-material "link" :v-adjust -0.1))
+;;                                "Showing related emails")
+;;         mu4e-headers-full-label
+;;         (make-help-button-cons "F" (concat " " (all-the-icons-material "disc_full"))
+;;                                "Search is full!")))
 #+end_src
 
 *** Notifications
